Updated cart and order service